dummy change to trigger build.

--- a/public/index.html
+++ b/public/index.html
@@ -1982,7 +1982,7 @@
 													data-id="127b4b5f" data-element_type="widget"
 													data-widget_type="text-editor.default">
 													<div class="elementor-widget-container">
-														<p><br><br><br>Finally! Halloween will be back in town on the 31st of October.<br> This is the moment the Creepy Punks come crawling out of the darkest spots of Solana chain.....<br /><br />
+														<p><br><br><br>Finally! Halloween will be back in town on the 31st of October.<br> This is the moment the Creepy Punks come crawling out of the darkest spots of Solana chain....<br /><br />
 														</p>
 													</div>
 												</div>
