fixed small typo's and changed meet the team.

--- a/public/index.html
+++ b/public/index.html
@@ -31,9 +31,9 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="language" content="English">
 	<meta property="og:url" content="https://creepypunks.art/" />
-	<meta property="og:title" content="Creepy Pinks">
+	<meta property="og:title" content="Creepy Punks">
 	<meta property="og:description"
-		content="There are only 333 Creepy Punks crwaling around, made out of 50+ unique traits! They are quick, so you gotta be quick aswell.">
+		content="There are only 333 Creepy Punks crawling around, made out of 50+ unique traits! They are quick, so you gotta be quick aswell.">
 	<meta property="og:locale" content="en_US" />
 	<meta property="og:type" content="article" />
 	<link rel="stylesheet" type="text/css" href="./css/wpfc-minified-8z2a7wp1-67393.css" media="all" />
@@ -2081,7 +2081,7 @@
 																				style="font-family:'Arial-Black', 'Arial Black', sans-serif;font-weight:900;font-size:50px;fill:white;">3</text>
 																		</g>
 																	</svg> </span> <span
-																	class="elementor-icon-list-text">Build a strong & small community for all Creepy Punk holders.</span> </li>
+																	class="elementor-icon-list-text">Build a strong & exclusive community for all Creepy Punk holders.</span> </li>
 															<li class="elementor-icon-list-item"> <span
 																	class="elementor-icon-list-icon"> <svg
 																		xmlns="http://www.w3.org/2000/svg"
@@ -2174,10 +2174,10 @@
 													data-widget_type="image-box.default">
 													<div class="elementor-widget-container">
 														<div class="elementor-image-box-wrapper">
-															<figure class="elementor-image-box-img"><img width="1000"
-																	height="1000" src="./images/4.png"
-																	class="attachment-1536x1536 size-1536x1536" alt=""
-																	loading="lazy" /></figure>
+															<a href="https://twitter.com/Jacksonm_GMI" target="_blank"> 															<figure class="elementor-image-box-img"><img width="1000"
+																height="1000" src="./images/4.png"
+																class="attachment-1536x1536 size-1536x1536" alt=""
+																loading="lazy" /></figure> </a>
 															<div class="elementor-image-box-content">
 																<h3 class="elementor-image-box-title">GOAT</h3>
 																<p class="elementor-image-box-description">CreepyPunks CEO</p>
@@ -2195,11 +2195,11 @@
 													data-widget_type="image-box.default">
 													<div class="elementor-widget-container">
 														<div class="elementor-image-box-wrapper">
-															<figure class="elementor-image-box-img"><img width="604"
-																	height="599"
-																	src="./images/2.png"
-																	class="attachment-1536x1536 size-1536x1536" alt=""
-																	loading="lazy" /></figure>
+															<a href="https://twitter.com/BullishHomie" target="_blank"> 															<figure class="elementor-image-box-img"><img width="604"
+																height="599"
+																src="./images/2.png"
+																class="attachment-1536x1536 size-1536x1536" alt=""
+																loading="lazy" /></figure></a>
 															<div class="elementor-image-box-content">
 																<h3 class="elementor-image-box-title">Bullish Homie</h3>
 																<p class="elementor-image-box-description">NFT designer & addict</p>
@@ -2217,10 +2217,10 @@
 													data-widget_type="image-box.default">
 													<div class="elementor-widget-container">
 														<div class="elementor-image-box-wrapper">
-															<figure class="elementor-image-box-img"><img width="1000"
-																	height="1000" src="./images/3.png"
-																	class="attachment-1536x1536 size-1536x1536" alt=""
-																	loading="lazy" /></figure>
+															<a href="https://twitter.com/Pars3c1" target="_blank">															<figure class="elementor-image-box-img"><img width="1000"
+																height="1000" src="./images/3.png"
+																class="attachment-1536x1536 size-1536x1536" alt=""
+																loading="lazy" /></figure></a>
 															<div class="elementor-image-box-content">
 																<h3 class="elementor-image-box-title">Pars3c</h3>
 																<p class="elementor-image-box-description">is a unit of Lenght.</p>
@@ -2230,6 +2230,27 @@
 												</div>
 											</div>
 										</div>
+										<div class="elementor-column elementor-col-25 elementor-top-column elementor-element elementor-element-5fc8575f"
+										data-id="5fc8575f" data-element_type="column">
+										<div class="elementor-widget-wrap elementor-element-populated">
+											<div class="elementor-element elementor-element-70a22c95 elementor-position-top elementor-vertical-align-top elementor-widget elementor-widget-image-box"
+												data-id="70a22c95" data-element_type="widget"
+												data-widget_type="image-box.default">
+												<div class="elementor-widget-container">
+													<div class="elementor-image-box-wrapper">
+														<a href="https://twitter.com/inspiratibiz" target="_blank">														<figure class="elementor-image-box-img"><img width="1000"
+															height="1000" src="./images/1.png"
+															class="attachment-1536x1536 size-1536x1536" alt=""
+															loading="lazy" /></figure></a>
+														<div class="elementor-image-box-content">
+															<h3 class="elementor-image-box-title">Ola</h3>
+															<p class="elementor-image-box-description">Innovating crypto Metaverse</p>
+														</div>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
 									</div>
 								</section>
 								<section
