--- a/public/index.html
+++ b/public/index.html
@@ -2179,7 +2179,7 @@
 																class="attachment-1536x1536 size-1536x1536" alt=""
 																loading="lazy" /></figure> </a>
 															<div class="elementor-image-box-content">
-																<h3 class="elementor-image-box-title">GOAT</h3>
+																<h3 class="elementor-image-box-title">Jackson M</h3>
 																<p class="elementor-image-box-description">CreepyPunks CEO</p>
 															</div>
 														</div>
